docs: 更新论文文稿、补充材料及项目文档
- 为 Manuscript.tex 和 SI.tex 添加论文标题
- 在 SI.tex 中添加 \maketitle 命令
- 从 Manuscript.tex 中移除 Declarations 章节
- 更新 README.md，改进格式并详细阐述核心科研思路
- 添加 .gitignore 文件以忽略 LaTeX 编译中间文件
- 添加已编译的 Manuscript.pdf 和 SI.pdf 文件
- 将多个文件的模式从可执行改为普通

--- a/Text/Manuscript.tex
+++ b/Text/Manuscript.tex
@@ -34,7 +34,7 @@
 
 \begin{document}
 
-\title[]{}
+\title[]{Island-bridge acoustic resonators enable multiplexed haptic interface and hand tracking}
 
 \author[1]{\fnm{Linhan} \sur{Fan}}\email{linhanfan@seu.edu.cn}
 
@@ -58,18 +58,6 @@
 
 \section*{Acknowledgments}
 This work was supported jointly by National Natural Science Foundation of China (72571059), the SEU Innovation Capability Enhancement Plan for Doctoral Students (CXJH\_SEU 26066).
-
-\section*{Declarations}
-\begin{itemize}
-\item Funding
-\item Conflict of interest
-\item Ethics approval
-\item Consent to participate
-\item Consent for publication
-\item Availability of data and materials
-\item Code availability
-\item Authors' contributions
-\end{itemize}
 
 \bibliography{HARP}% common bib file
 
