--- a/Text/SI.tex
+++ b/Text/SI.tex
@@ -32,9 +32,10 @@
 
 \raggedbottom
 
+
 \begin{document}
 
-\title[]{Supplementary Information for: }
+\title[]{Supplementary Information for: Island-bridge acoustic resonators enable multiplexed haptic interface and hand tracking}
 
 \author[1]{\fnm{Linhan} \sur{Fan}}\email{linhanfan@seu.edu.cn}
 
@@ -42,6 +43,7 @@
 
 \affil*[1]{\orgdiv{School of Mechanical Engineering}, \orgname{Southeast University}, \orgaddress{\city{Nanjing}, \country{China}}}
 
+\maketitle
 
 \bibliography{HARP}% common bib file
 
